--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,12 @@
     "@tabler/icons-react": "^3.29.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.2.0",
     "framer-motion": "^12.0.3",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
     "react-router-dom": "^7.1.3",
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.6.0",
